[package]
name = "bunkercash"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bunkercash"

[features]
default = ["init-if-needed"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token-2022 = "6.0.0"
spl-tlv-account-resolution = "0.8.0"

