[package]
name = "bunkercash"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
license-file = "../../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "bunkercash"

[features]
default = ["init-if-needed"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]
# Optional features used by anchor-lang macros (silence unexpected_cfgs).
custom-heap = []
custom-panic = []
anchor-debug = []


[build-dependencies]
# Reads .env at compile time and emits cargo:rustc-env vars for use with env!()
dotenvy = "=0.15.7"

[dependencies]
anchor-lang = "=0.31.1"
anchor-spl = "=0.31.1"
spl-token-2022 = "=6.0.0"
spl-tlv-account-resolution = "=0.8.1"
mpl-token-metadata = "=5.1.1"
# Pin to avoid edition 2024 incompatibility with Solana's cargo-build-sbf
constant_time_eq = "=0.3.1"
